# fediaf-verifier

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/commands/: icp-sync.md
.devcontainer/: devcontainer.json
data/glossaries/: pet_food_de.json
docs/: FEDIAF_IMPLEMENTATION_PLAN_v2.md  USER_MANUAL.md  _fix_diacritics2.js  _fix_diacritics3.js  _fix_diacritics4.js  _fix_diacritics5.js  bult-qa-tasks.ics  comparison-vs-neurons-globalvision.md  import-tasks-icp.js
portal/: Caddyfile  docker-compose.yml
portal/config/: bookmarks.yaml  docker.yaml  services.yaml  settings.yaml  widgets.yaml
src/catalog_translator/: __init__.py  app.py  exporter.py  extractor.py  glossary.py  prompts.py  structurer.py  translator.py  validator.py
src/catalog_translator/models/: __init__.py  extraction.py  glossary.py  translation.py  units.py  validation.py
src/fediaf_verifier/: __init__.py  additives_validator.py  annotator.py  app.py  artwork_inspector.py  benchmarks.py  compliance.py  config.py  converter.py  cross_check.py  data_collector.py  deps.py  ean_validator.py  exceptions.py  export.py  github_issues.py  jsx_generator.py  jsx_text_generator.py  linguistic_check.py  market_rules.py  prompts.py  providers.py  renderers.py  rules.py  spellcheck.py  utils.py  verifier.py
src/fediaf_verifier/models/: __init__.py  artwork_inspection.py  base.py  claims_check.py  cross_check.py  design_analysis.py  ean_check.py  eu_labelling.py  extraction.py  issues.py  label_diff.py  label_structure.py  label_text.py  linguistic.py  market_check.py  market_trends.py  nutrients.py  packaging.py  presentation_check.py  product.py  product_description.py  report.py  translation.py
src/packaging_designer/: __init__.py  analyzer.py  app.py  back_label.py  batch.py  enricher.py  pipeline.py
src/packaging_designer/builders/: __init__.py  idml_builder.py  idml_templates.py  jsx_builder.py  mockup_3d.py  preview_builder.py
src/packaging_designer/generators/: __init__.py  barcode.py  barcode_gen.py  dieline.py  nutrition_table.py  symbols.py
src/packaging_designer/models/: __init__.py  design_elements.py  enrichment.py  export_config.py  package_spec.py
src/packaging_designer/utils/: __init__.py  color.py  coords.py  vectorizer.py
tests/: audit_e2e.py  conftest.py  test_accuracy.py  test_compliance.py  test_config.py  test_converter.py  test_cross_check.py  test_linguistic_check.py  test_models.py  test_packaging_designer.py  test_providers.py  test_rules.py  test_verifier.py
tests/reference_cases/: README.md
